--- a/frontend/src/app/store/store-main/store-header/store-header.component.html
+++ b/frontend/src/app/store/store-main/store-header/store-header.component.html
@@ -6,9 +6,9 @@
   </div>
   
   <div class="store-search store-center col-md-6">
-    <input type="text" class="form-control" />
+    <input type="text" class="form-control"  (keyup)='searchProducts($event.target.value)' />
     <button class="btn btn-primary">
-      
+        Search
     </button>
   </div>
   <div class="store-contact store-center col-md-3 d-flex align-items-center justify-content-center">
