--- a/frontend/src/app/store/store-main/left-navigation/specials/specials.component.html
+++ b/frontend/src/app/store/store-main/left-navigation/specials/specials.component.html
@@ -13,127 +13,19 @@
 
         </div>
     </div>
+     <ng-container *ngIf="($topProducts | async ) as topProducts">
+         <app-product-box
+         *ngFor="let product of topProducts"
+         [product]='product'>
+         </app-product-box>
 
-    <div class="special-box mt-4">
-        <div class="row">
-            <div class="col-4">
-                <app-spinner></app-spinner>
-            </div>
-            <div class="col-8 pl-0">
-                <span class="price-fixed">$238.96</span>
-                <span class="price-sale">$278.96</span>
-                <p>Lorem ipsum dolor sit</p>
-
-            </div>
-        </div>
-    </div>
-    <div class="special-box mt-4">
-        <div class="row">
-            <div class="col-4">
-                    <app-spinner></app-spinner>
-            </div>
-            <div class="col-8 pl-0">
-                <span class="price-fixed">$238.96</span>
-                <span class="price-sale">$278.96</span>
-                <p>Lorem ipsum dolor sit</p>
-
-            </div>
-        </div>
-    </div>
-    <div class="special-box mt-4">
-        <div class="row">
-            <div class="col-4">
-                    <app-spinner></app-spinner>
-            </div>
-            <div class="col-8 pl-0">
-                <span class="price-fixed">$238.96</span>
-                <span class="price-sale">$278.96</span>
-                <p>Lorem ipsum dolor sit</p>
-            </div>
-        </div>
-    </div>
-    <div class="special-box mt-4">
-        <div class="row">
-            <div class="col-4">
-                    <app-spinner></app-spinner>
-            </div>
-            <div class="col-8 pl-0">
-                <span class="price-fixed">$238.96</span>
-                <span class="price-sale">$278.96</span>
-                <p>Lorem ipsum dolor sit</p>
-
-            </div>
-        </div>
-    </div>
+     </ng-container>
 </div>
 
 
 
-<div class="special-container">
-        <div class="d-flex justify-content-between special">
-            <div class="box-special">
-                <p>Bestellers</p>
-            </div>
+
+
+<app-best-sellers>
     
-            <div class="arrows d-flex">
-                <div class="arrow arrow-left">
-                    <span>
-                        <</span> </div> <div class="arrow arrow-right">
-                            <span>></span>
-                </div>
-    
-            </div>
-        </div>
-    
-        <div class="special-box mt-4">
-            <div class="row">
-                <div class="col-4">
-                        <app-spinner></app-spinner>
-                </div>
-                <div class="col-8 pl-0">
-                    <span class="price-fixed">$238.96</span>
-                    <span class="price-sale">$278.96</span>
-                    <p>Lorem ipsum dolor sit</p>
-    
-                </div>
-            </div>
-        </div>
-        <div class="special-box mt-4">
-            <div class="row">
-                <div class="col-4">
-                        <app-spinner></app-spinner>
-                </div>
-                <div class="col-8 pl-0">
-                    <span class="price-fixed">$238.96</span>
-                    <span class="price-sale">$278.96</span>
-                    <p>Lorem ipsum dolor sit</p>
-    
-                </div>
-            </div>
-        </div>
-        <div class="special-box mt-4">
-            <div class="row">
-                <div class="col-4">
-                        <app-spinner></app-spinner>
-                </div>
-                <div class="col-8 pl-0">
-                    <span class="price-fixed">$238.96</span>
-                    <span class="price-sale">$278.96</span>
-                    <p>Lorem ipsum dolor sit</p>
-                </div>
-            </div>
-        </div>
-        <div class="special-box mt-4">
-            <div class="row">
-                <div class="col-4">
-                        <app-spinner></app-spinner>
-                </div>
-                <div class="col-8 pl-0">
-                    <span class="price-fixed">$238.96</span>
-                    <span class="price-sale">$278.96</span>
-                    <p>Lorem ipsum dolor sit</p>
-    
-                </div>
-            </div>
-        </div>
-    </div>
+</app-best-sellers>
