--- a/frontend/src/app/store/store-main/store-header/store-header.component.html
+++ b/frontend/src/app/store/store-main/store-header/store-header.component.html
@@ -1,6 +1,6 @@
 <div class="store-header row align-items-center">
 
-  <div class="store-title store-center col-md-3" [routerLink]="['/']"  style="cursor: pointer;" >
+  <div class="store-title store-center col-md-3" [routerLink]="['/store']"  style="cursor: pointer;" >
     <h2>GTU SHOP</h2>
     <p>Online store</p>
   </div>
