--- a/frontend/src/app/user-panel/add-item/add-item.component.html
+++ b/frontend/src/app/user-panel/add-item/add-item.component.html
@@ -35,18 +35,21 @@
                     </div>
                     <div class="col-4">
 
-                        <label for="add">Product Description</label>
-                        <input type="text" class="form-control" id='add' placeholder="Enter description" formControlName="description">
+                    <label for="category" class="label-control">Select Category</label>
+                    <select class="form-control" id='category' formControlName="category_id" [ngClass]="{'is-invalid': submitted &&  proCtrls.category_id.errors}">
+                            <option disabled value="">Select One</option>
+                            <option *ngFor='let cat of $categories | async' [value]='cat.id'> {{ cat.name }}</option>
+                    </select>
+
+                    
 
                     </div>
             </div>
             <div class="row pt-3">
-                    <div class="col-4">
-                        <label for="category" class="label-control">Select Category</label>
-                         <select class="form-control" id='category' formControlName="category_id" [ngClass]="{'is-invalid': submitted &&  proCtrls.category_id.errors}">
-                              <option disabled value="">Select One</option>
-                              <option *ngFor='let cat of $categories | async' [value]='cat.id'> {{ cat.name }}</option>
-                         </select>
+                    <div class="col-12">
+                        <label  class="label-control">Select Description</label>
+                        <angular-editor [config]='editorConfig' 
+                                        formControlName="description"></angular-editor>
                     </div>
 
            </div>
