--- a/frontend/src/app/user-panel/add-item/add-item.component.scss
+++ b/frontend/src/app/user-panel/add-item/add-item.component.scss
@@ -86,3 +86,10 @@
         top: 2px;
       }
     }}
+
+   :host ::ng-deep  .angular-editor-toolbar-set {
+       &:nth-child(11) {
+            display: none !important; 
+       }
+     
+    }
