--- a/frontend/src/app/user-panel/user-panel.component.html
+++ b/frontend/src/app/user-panel/user-panel.component.html
@@ -7,7 +7,7 @@
                     <a [routerLink]="['./user-settings']" routerLinkActive="active" class="pl-3"> Account settings</a>
              </div>
              <div class="panel d-flex" >
-                 <button class="btn btn-info" [routerLink]="['/']" style="margin-right: -15px;">Back To Shop</button>
+                 <button class="btn btn-info" [routerLink]="['/store']" style="margin-right: -15px;">Back To Shop</button>
              </div> 
         </div>
         <router-outlet></router-outlet>
