--- a/frontend/src/app/store/store-main/store-item-detailed/store-item-detailed.component.html
+++ b/frontend/src/app/store/store-main/store-item-detailed/store-item-detailed.component.html
@@ -8,7 +8,7 @@
 
      <h1>{{  product.price  }}</h1>
 
-     <h1>{{  product.description  }}</h1>
+     <h1 [innerHTML]='product.description'></h1>
 
      <h1>{{  product.created_at | date  }}</h1>
 
